# PLSSVM

./: .clang-format  .clang-tidy  .gitignore  CITATION.cff  CMakeLists.txt  CMakePresets.json  DPCPP_2detail_2queue_8hpp.html  DPCPP_2detail_2queue_8hpp__dep__incl.map  DPCPP_2detail_2queue_8hpp__dep__incl.md5  DPCPP_2detail_2queue_8hpp_source.html  DPCPP_2detail_2queue__impl_8hpp.html  DPCPP_2detail_2queue__impl_8hpp_source.html  LICENSE  LICENSE.md  OpenCL_2detail_2device__ptr_8hpp.html  OpenCL_2detail_2device__ptr_8hpp__dep__incl.map  OpenCL_2detail_2device__ptr_8hpp__dep__incl.md5  OpenCL_2detail_2device__ptr_8hpp__incl.map  OpenCL_2detail_2device__ptr_8hpp__incl.md5  OpenCL_2detail_2device__ptr_8hpp_source.html  OpenMP_2q__kernel_8hpp.html  OpenMP_2q__kernel_8hpp__incl.map  OpenMP_2q__kernel_8hpp__incl.md5  OpenMP_2q__kernel_8hpp_source.html  OpenMP_2svm__kernel_8hpp.html  OpenMP_2svm__kernel_8hpp__incl.md5  OpenMP_2svm__kernel_8hpp_source.html  README.md  SYCL_2DPCPP_2detail_2device__ptr_8hpp.html  SYCL_2DPCPP_2detail_2device__ptr_8hpp__dep__incl.map  SYCL_2DPCPP_2detail_2device__ptr_8hpp__dep__incl.md5  SYCL_2DPCPP_2detail_2device__ptr_8hpp_source.html  SYCL_2detail_2device__ptr_8hpp.html  SYCL_2detail_2device__ptr_8hpp__dep__incl.map  SYCL_2detail_2device__ptr_8hpp__dep__incl.md5  SYCL_2detail_2device__ptr_8hpp__incl.map  SYCL_2detail_2device__ptr_8hpp__incl.md5  SYCL_2detail_2device__ptr_8hpp_source.html  SYCL_2hipSYCL_2detail_2device__ptr_8hpp.html  SYCL_2hipSYCL_2detail_2device__ptr_8hpp__dep__incl.map  (+1243 more)
bindings/: CMakeLists.txt
bindings/Python/: CMakeLists.txt  README.md  backend_types.cpp  classification_types.cpp  constants.cpp  csvm.cpp  data_set.cpp  file_format_types.cpp  gamma.cpp  kernel_function_types.cpp  kernel_functions.cpp  main.cpp  model.cpp  parameter.cpp  sklearn.cpp  solver_types.cpp  target_platforms.cpp  utility.hpp  verbosity_levels.cpp
bindings/Python/backends/: adaptivecpp_csvm.cpp  cuda_csvm.cpp  dpcpp_csvm.cpp  hip_csvm.cpp  hipsycl_csvm.cpp  opencl_csvm.cpp  openmp_csvm.cpp  stdpar_csvm.cpp  sycl.cpp
bindings/Python/detail/: logger.cpp  performance_tracker.cpp
bindings/Python/exceptions/: exceptions.cpp
bindings/Python/version/: version.cpp
docs/: CMakeLists.txt  Doxyfile.in  plssvm-predict.1  plssvm-predict.1.in  plssvm-scale.1  plssvm-scale.1.in  plssvm-train.1  plssvm-train.1.in
docs/resources/: dirs.dox
docs/resources/examples/: csvm_examples.cpp  csvm_factory_examples.cpp  data_set_examples.cpp  model_examples.cpp  parameter_examples.cpp
src/: IO.cpp  (+14 more)
src/plssvm/OpenCL/: CMakeLists.txt  CSVM_mixed_CL_CU.cu  OCL_CSVM.cpp  OpenCL_CSVM.cpp  cuda-kernel.cpp  svm-kernel.cpp  svm-kernel.cu
tests/: CMakeLists.txt  MockCSVM.hpp  backend_types.cpp  base_test.cpp  classification_report.cpp  classification_types.cpp  csvm.cpp  csvm_factory.cpp  csvm_test.cpp  custom_test_macros.hpp  data_set.cpp  default_value.cpp  diff.py  file_format_types.cpp  gamma.cpp  kernel_function_types.cpp  kernel_functions.cpp  kernel_types.cpp  kokkos_main.cpp  main.cpp  main.hpp  matrix.cpp  mock_csvm.hpp  model.cpp  naming.hpp  parameter.cpp  parameter_test.cpp  shape.cpp  solver_types.cpp  target_platforms.cpp  test.cpp  type_list.cpp  types_to_test.hpp  utility.hpp  verbosity_levels.cpp
tests/backends/: CMakeLists.txt  README.md  compare.cpp  compare.hpp  execution_range.cpp  generic_csvm_tests.hpp  generic_device_ptr_tests.h  generic_device_ptr_tests.hpp  generic_exceptions_tests.hpp  generic_gpu_csvm_tests.hpp  generic_pinned_memory_tests.hpp  generic_tests.hpp  ground_truth.cpp  ground_truth.hpp
tests/backends/CUDA/: CMakeLists.txt  MockCUDA_CSVM.hpp  cuda_csvm.cpp  device_ptr.cpp  exceptions.cpp  mock_cuda_csvm.hpp  test.cpp  utility.cpp
tests/backends/HIP/: CMakeLists.txt  device_ptr.cpp  exceptions.cpp  exceptions.hip  hip_csvm.cpp  hip_csvm.hip  mock_hip_csvm.hpp  test.cpp  utility.cpp
tests/backends/Kokkos/: CMakeLists.txt  exceptions.cpp  execution_space.cpp  kokkos_csvm.cpp  mock_kokkos_csvm.hpp
tests/backends/OpenCL/: CMakeLists.txt  MockOpenCL_CSVM.hpp  device_ptr.cpp  exceptions.cpp  mock_opencl_csvm.hpp  opencl_csvm.cpp  test.cpp  utility.cpp
tests/backends/OpenMP/: CMakeLists.txt  MockOpenMP_CSVM.hpp  csvm.cpp  exceptions.cpp  kernel_matrix_assembly.cpp  mock_openmp_csvm.hpp  openmp_csvm.cpp  q_kernel.cpp  svm_kernel.cpp  test.cpp
tests/backends/SYCL/: CMakeLists.txt  exceptions.cpp  implementation_type.cpp  implementation_types.cpp  kernel_invocation_type.cpp  kernel_invocation_types.cpp  mock_sycl_csvm.hpp  sycl_csvm.cpp  test.cpp
tests/backends/stdpar/: CMakeLists.txt  exceptions.cpp  implementation_types.cpp  mock_stdpar_csvm.hpp  stdpar_csvm.cpp
tests/data/: 500x200.libsvm  5x4.arff  5x4.libsvm  5x4.sparse.libsvm
tests/data/arff/: 0x4.arff  3x2_without_label.arff  5x4.arff  5x4.arff.no_label  5x4_TEMPLATE.arff  5x4_int.arff  5x4_int_without_label.arff  5x4_sparse.arff  5x4_sparse_TEMPLATE.arff  5x4_sparse_int.arff  5x4_sparse_string.arff  5x4_string.arff  5x4_string_without_label.arff  6x4_TEMPLATE.arff  6x4_sparse_TEMPLATE.arff
tests/data/libsvm/: 3x2_without_label.libsvm  500x200.libsvm  500x200.libsvm.test  500x200_4.libsvm  5x4.libsvm  5x4.libsvm.no_label  5x4.sparse.libsvm  5x4.sparse.libsvm.no_label  5x4_TEMPLATE.libsvm  5x4_sparse.libsvm  5x4_sparse_TEMPLATE.libsvm  5x4_sparse_string.libsvm  5x4_string.libsvm  5x4_string_without_label.libsvm  6x4_TEMPLATE.libsvm  6x4_sparse_TEMPLATE.libsvm
tests/data/model/: 5x4_linear.libsvm.model  (+20 more)
tests/data_set/: constructors.cpp  getter.cpp  label_mapper.cpp  save.cpp  scaling.cpp
tests/detail/: arithmetic_type_name.cpp  assert.cpp  data_distribution.cpp  execution_range.cpp  layout.cpp  logger.cpp  logging.cpp  logging_without_performance_tracking.cpp  memory_size.cpp  move_only_any.cpp  operators.cpp  performance_tracker.cpp  sha256.cpp  simple_any.cpp  string_conversion.cpp  string_utility.cpp  type_list.cpp  type_traits.cpp  utility.cpp
tests/exceptions/: exceptions.cpp  source_location.cpp  utility.hpp
tests/mocks/: CSVM.hpp
tests/version/: version.cpp
(+1094 files in other folders)
